Also load related objects
