# pkg/model/team.go
@@ -6,9 +6,10 @@ import (
 
 // Team within Gomematic.
 type Team struct {
-	ID        string `storm:"id"`
-	Slug      string `storm:"index,unique"`
-	Name      string `storm:"unique"`
+	ID        string `storm:"id" gorm:"primary_key"`
+	Slug      string `storm:"unique" sql:"unique_index"`
+	Name      string `storm:"unique" sql:"unique_index"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
+	Users     []*TeamUser
 }
