# pkg/model/user.go
@@ -6,13 +6,14 @@ import (
 
 // User within Gomematic.
 type User struct {
-	ID        string `storm:"id"`
-	Slug      string `storm:"index,unique"`
-	Email     string `storm:"unique"`
-	Username  string `storm:"unique"`
+	ID        string `storm:"id" gorm:"primary_key"`
+	Slug      string `storm:"unique" sql:"unique_index"`
+	Email     string `storm:"unique" sql:"unique_index"`
+	Username  string `storm:"unique" sql:"unique_index"`
 	Password  string
-	Active    bool
-	Admin     bool
+	Active    bool `sql:"default:false"`
+	Admin     bool `sql:"default:false"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
+	Teams     []*TeamUser
 }
